fixed scrollbars on landing page

--- a/gmx/gmx-geputzt.user.css
+++ b/gmx/gmx-geputzt.user.css
@@ -6,7 +6,7 @@
               *** Not working for gmx.fr / CaraMail / gmx.com ***
 @namespace    stonecrusher
 @author       stonecrusher
-@version      3.1.2
+@version      3.1.3
 @homepageURL  https://github.com/stonecrusher/stylus-UserCSS/tree/master/gmx
 @supportURL   https://github.com/stonecrusher/stylus-UserCSS/issues
 @license      CC-BY-NC-SA-4.0
@@ -69,6 +69,9 @@
     }
     [data-content] [data-content-login] {
         justify-content: center !important;
+    }
+    .main {
+        grid-template-columns: 100% !important;
     }
     if not menu-keep {
         [aria-label="netid"],
